--- a/exo7.html
+++ b/exo7.html
@@ -8,6 +8,8 @@
     <title>Image</title>
 </head>
 <body>
-    
+    <table>
+        <canvas id='c1' width=600 height=300></canvas>
+    </table>
 </body>
 </html>
