--- a/exo7.html
+++ b/exo7.html
@@ -8,7 +8,7 @@
     <title>Image</title>
 </head>
 <body>
-    <table id="tablecentre">
+    <table id="border">
     <div class="grid">
 
         <div class="case1" ></div>
